refactor: Update environment configuration to change locale settings from English to French in .env.example and app.php

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-APP_NAME="CertiCarte"
+APP_NAME=CertiCarte
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=fr
+APP_FALLBACK_LOCALE=fr
+APP_FAKER_LOCALE=fr_FR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -28,9 +28,9 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 SESSION_DRIVER=database
-SESSION_LIFETIME=120 # Should be 30 in production
-SESSION_ENCRYPT=false # Should be "true" in production
-SESSION_SECURE_COOKIE=false # Should be "true" in production
+SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_SECURE_COOKIE=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
