--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
+    "name": "certicarte",
+    "version": "1.0.0",
+    "description": "A comprehensive school management system built with Laravel for educational institutions.",
+    "homepage": "https://github.com/moustapha-aden/CertiCarte#readme",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/moustapha-aden/CertiCarte.git"
+    },
     "$schema": "https://json.schemastore.org/package.json",
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
         "dev": "vite",
-        "watch": "vite build --watch",
-        "hot": "vite --host"
+        "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.1.13",
-        "vite": "^7.0.4"
+        "@tailwindcss/vite": "4.0.0",
+        "axios": "1.11.0",
+        "concurrently": "9.0.1",
+        "laravel-vite-plugin": "2.0.0",
+        "tailwindcss": "4.1.13",
+        "vite": "7.0.4"
     },
     "dependencies": {
-        "alpinejs": "^3.15.0"
+        "alpinejs": "3.15.0"
     }
 }
