chore: update package dependencies and versioning

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-    "name": "certicarte",
-    "version": "1.0.0",
+    "name": "CertiCarte",
     "description": "A comprehensive school management system built with Laravel for educational institutions.",
     "homepage": "https://github.com/moustapha-aden/CertiCarte#readme",
     "repository": {
@@ -8,21 +7,19 @@
         "url": "git+https://github.com/moustapha-aden/CertiCarte.git"
     },
     "$schema": "https://json.schemastore.org/package.json",
-    "private": true,
-    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "4.0.0",
-        "axios": "1.11.0",
-        "concurrently": "9.0.1",
-        "laravel-vite-plugin": "2.0.0",
-        "tailwindcss": "4.1.13",
-        "vite": "7.0.4"
+        "@tailwindcss/vite": "^4.1.15",
+        "axios": "^1.11.0",
+        "concurrently": "^9.0.1",
+        "laravel-vite-plugin": "^2.0.0",
+        "tailwindcss": "^4.1.13",
+        "vite": "^7.0.4"
     },
     "dependencies": {
-        "alpinejs": "3.15.0"
+        "alpinejs": "^3.15.0"
     }
 }
