Update README-RENDER.md, render.yaml, and start-render.sh for improved database setup and error handling
Enhanced README-RENDER.md with detailed instructions for MySQL and PostgreSQL database setup on Render, including manual creation steps and environment variable configuration. Updated render.yaml to clarify database type limitations on the free tier. Improved start-render.sh to handle database connection retries and dynamically configure Nginx with enhanced error handling and logging.

--- a/render.yaml
+++ b/render.yaml
@@ -40,9 +40,13 @@ services:
           name: certicarte-db
           property: password
 
+# Note: Render's free tier may only support PostgreSQL
+# If MySQL is required, create it manually via the Render dashboard
+# and link it to the web service using environment variables
 databases:
   - name: certicarte-db
     databaseName: certicarte
     user: certicarte_user
     plan: free
+    # databaseType: mysql  # Uncomment if Render supports this syntax
 
