Add post-deploy command to generate application key in render.yaml for improved security during deployment.

--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,7 @@ services:
     buildCommand: ""
     startCommand: ""
     postDeployCommand: |
+      php artisan key:generate --force
       php artisan config:cache
       php artisan route:cache
       php artisan view:cache
