Update APP_URL and enhance seeder with classes and students
Changed APP_URL in .env.example to use localhost for easier local development. Extended DatabaseSeeder to create school years, classes for each year, and students for each class to provide more comprehensive seed data.

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=CertiCarte
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://certicarte.test
+APP_URL=http://localhost
 
 APP_LOCALE=fr
 APP_FALLBACK_LOCALE=fr
