--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,14 @@ DB_DATABASE=certicarte
 DB_USERNAME=root
 DB_PASSWORD=
 
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=...
+MAIL_PASSWORD=...
+MAIL_ENCRYPTION=tls
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=30
 SESSION_ENCRYPT=true
@@ -36,6 +44,6 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+#CACHE_STORE=database
 
 VITE_APP_NAME="${APP_NAME}"
