Mise à jour des configurations et des traductions, ajout de la gestion des sessions, amélioration de l'authentification et des vues

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=CertiCarte
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://certicarte.test
+APP_URL=https://certicarte.tech
 
 APP_LOCALE=fr
 APP_FALLBACK_LOCALE=fr
@@ -25,6 +25,9 @@ DB_DATABASE=certicarte
 DB_USERNAME=root
 DB_PASSWORD=
 
+# 1440 = 24h
+# 10080 = 1 semaine (7 jours)
+SANCTUM_EXPIRATION=10080
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
@@ -32,6 +35,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=...
 MAIL_PASSWORD=...
 MAIL_ENCRYPTION=tls
+MAIL_FROM_NAME=CertiCarte
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=30
